--- a/src/color.scss
+++ b/src/color.scss
@@ -1,9 +1,9 @@
-$white: #FFFFFF;
+$white: #ffffff;
 $black: #000;
-$dark_red:#1c0505;
-$red: #104d57;
-$red_semi: #e1f0f2f1;
-$red_2: #096868;
+$dark_green:#0f474f;
+$green: #104d57;
+$green_semi: #e1f0f2f1;
+$green_2: #096868;
 $light_red: #d47a7a;
 $light:#f8e0e0;
 $grey:#5b5a5a;
