--- a/src/global.scss
+++ b/src/global.scss
@@ -18,7 +18,7 @@ body,
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: $red;
+    background-color: $green;
     border-radius: 20px;
     border: 4px solid transparent;
 }
