--- a/src/pages/web-pages/home.scss
+++ b/src/pages/web-pages/home.scss
@@ -1,11 +1,11 @@
-@import '../color.scss';
-@import '../assets/fonts/fonts.scss';
+@import '../../color.scss';
+@import '../../assets/fonts/fonts.scss';
 
 .home_container {
-    background-color: $red_semi;
+    background-color: $green_semi;
 
     .carousel_container {
-        background-color: $red_semi;
+        background-color: $green_semi;
         position: relative;
         // padding: 2%;
         z-index: 3;
@@ -82,7 +82,7 @@
             //         width: 40px;
             //         height: 40px;
             //         border: 1px solid $white;
-            //         background-color: $red;
+            //         background-color: $green;
             //         margin: 0px 23px;
 
             //         @media screen and (max-width: 1023px) {
@@ -120,7 +120,7 @@
             //         width: 40px;
             //         height: 40px;
             //         border: 1px solid $white;
-            //         background-color: $red;
+            //         background-color: $green;
             //         margin: 0px 23px;
 
             //         @media screen and (max-width: 1023px) {
@@ -175,7 +175,7 @@
 
             //         &.css-8ucetn-MuiButtonBase-root-MuiIconButton-root {
             //             .MuiSvgIcon-root {
-            //                 fill: $red;
+            //                 fill: $green;
             //             }
             //         }
             //     }
@@ -279,7 +279,7 @@
             padding: 1%;
 
             .MuiTypography-root {
-                color: $red;
+                color: $green;
                 font-size: 2.0em;
                 font-family: GillSans-Italic;
 
@@ -300,7 +300,7 @@
             padding: 1%;
 
             .MuiTypography-root {
-                color: $red;
+                color: $green;
                 font-size: 2.0em;
                 font-family: GillSans-Italic;
 
@@ -340,7 +340,7 @@
                 }
 
                 .MuiTypography-root {
-                    color: $red;
+                    color: $green;
                     font-size: 1.4em;
                     font-family: GillSans-Italic;
 
@@ -351,7 +351,7 @@
                     span {
                         font-size: 1.3em;
                         font-family: GillSans-MediumItalic;
-                        color: $red;
+                        color: $green;
                     }
                 }
             }
@@ -390,7 +390,7 @@
             padding: 1%;
 
             .MuiTypography-root {
-                color: $red;
+                color: $green;
                 font-size: 2.0em;
                 font-family: GillSans-Italic;
 
@@ -600,7 +600,7 @@
             .MuiPaper-root {
                 .MuiButtonBase-root {
                     .MuiCardContent-root {
-                        background-color: $red_semi;
+                        background-color: $green_semi;
 
                         .MuiTypography-root {
                             font-family: GillSans;
