--- a/src/pages/web-pages/oil-product.scss
+++ b/src/pages/web-pages/oil-product.scss
@@ -1,5 +1,5 @@
-@import '../color.scss';
-@import '../assets/fonts/fonts.scss';
+@import '../../color.scss';
+@import '../../assets/fonts/fonts.scss';
 
 .product-main {
     display: flex;
@@ -49,7 +49,7 @@
                     width: 40px;
                     height: 40px;
                     border: 1px solid $white;
-                    background-color: $red;
+                    background-color: $green;
                     margin: 0px 23px;
 
                     @media screen and (max-width: 1023px) {
@@ -87,7 +87,7 @@
                     width: 40px;
                     height: 40px;
                     border: 1px solid $white;
-                    background-color: $red;
+                    background-color: $green;
                     margin: 0px 23px;
 
                     @media screen and (max-width: 1023px) {
@@ -142,7 +142,7 @@
 
                     &.css-8ucetn-MuiButtonBase-root-MuiIconButton-root {
                         .MuiSvgIcon-root {
-                            fill: $red;
+                            fill: $green;
                         }
                     }
                 }
@@ -155,7 +155,7 @@
         display: flex;
         width: 50%;
         flex-direction: column;
-        // background-color: $red_semi;
+        // background-color: $green_semi;
         padding: 5%;
 
         @media screen and (max-width:768px) {
@@ -198,7 +198,7 @@
                     font-family: GillSans;
                     // text-decoration: underline;
                     font-size: 1.6em;
-                    color: $red;
+                    color: $green;
 
                     @media screen and (max-width:768px) {
                         font-size: 1.2em;
@@ -246,7 +246,7 @@
                         font-size: 1.0em;
                         span{
                             font-size: 1.2em;
-                            color: $red;
+                            color: $green;
                         }
                     }
                 }
