--- a/src/renders/card.scss
+++ b/src/renders/card.scss
@@ -26,7 +26,7 @@
                 }
 
                 .MuiCardContent-root {
-                    background-color: $red_semi;
+                    background-color: $green_semi;
                     .MuiTypography-root {
                         font-family: GillSans;
                         font-size: 1.3em;
@@ -55,7 +55,7 @@
                 }
                 .MuiButtonBase-root {
                     display: flex;
-                    background-color: $red;
+                    background-color: $green;
                     color: $white;
                 }
             }
@@ -69,7 +69,7 @@
         border-radius: 35px;
         z-index: 1000;
         border: 0;
-        background: $red;
+        background: $green;
         fill: $white;
         min-width: 43px;
         min-height: 43px;
@@ -78,7 +78,7 @@
     }
 
     .react-multiple-carousel__arrow:hover {
-        background: $red;
+        background: $green;
     }
 
     .react-multiple-carousel__arrow::before {
@@ -93,7 +93,7 @@
 
     .react-multiple-carousel__arrow:disabled {
         cursor: default;
-        background: $red;
+        background: $green;
     }
 
     .react-multiple-carousel__arrow--left {
