Management pages  Initailised

--- a/src/assets/fonts/fonts.scss
+++ b/src/assets/fonts/fonts.scss
@@ -50,3 +50,23 @@
     font-family: "GillSans-Condensed";
     src: url("./GillSans Condensed.otf") format("opentype"),
 }
+@font-face {
+    font-family: "Poppins";
+    src: url("./Poppins-Light.ttf");
+}
+@font-face {
+    font-family: "Poppins-Medium";
+    src: url("./Poppins-Medium.ttf");
+}
+@font-face {
+    font-family: "Poppins-Regular";
+    src: url("./Poppins-Regular.ttf");
+}
+@font-face {
+    font-family: "Poppins-Bold";
+    src: url("./Poppins-Bold.ttf");
+}
+@font-face {
+    font-family: "Poppins-SemiBold";
+    src: url("./Poppins-SemiBold.ttf");
+}
