--- a/src/color.scss
+++ b/src/color.scss
@@ -3,9 +3,10 @@ $black: #000;
 $dark_green:#0f474f;
 $green: #104d57;
 $green_semi: #e1f0f2f1;
-$green_2: #096868;
+$light_green: #096868;
 $light_red: #d47a7a;
 $light:#f8e0e0;
 $grey:#5b5a5a;
 $light_grey:#f7f3f3;
 $dark_grey:#3f3e3e;
+$red:#9b0a0a
