--- a/src/pages/management/cashflow.scss
+++ b/src/pages/management/cashflow.scss
@@ -1,2 +1,35 @@
 @import '../../color.scss';
 @import '../../assets/fonts/fonts.scss';
+
+.cashflow_container {
+    display: flex;
+    flex-direction: column;
+    max-width: 90vw;
+    justify-self: center;
+    font-size: 1.4em;
+    font-family: Poppins-Regular;
+
+    @media screen and (max-width: 991px) {
+        font-size: 1.2em;
+    }
+
+    @media screen and (max-width: 768px) {
+        font-size: 1.1em;
+    }
+
+    @media screen and (max-width: 576px) {
+        font-size: 1.0em;
+    }
+
+    .title_container {
+        display: flex;
+        align-items: center;
+        margin-bottom: 2%;
+
+        .MuiTypography-root {
+            color: $green;
+            font-family: inherit;
+            font-size: inherit;
+        }
+    }
+}
