--- a/src/pages/management/expenses.scss
+++ b/src/pages/management/expenses.scss
@@ -1,7 +1,7 @@
 @import '../../color.scss';
 @import '../../assets/fonts/fonts.scss';
 
-.inventory_container {
+.expenses_container {
     display: flex;
     flex-direction: column;
     max-width: 90vw;
