--- a/src/pages/management/orders.scss
+++ b/src/pages/management/orders.scss
@@ -1,2 +1,523 @@
 @import '../../color.scss';
 @import '../../assets/fonts/fonts.scss';
+
+.orders_container {
+    display: flex;
+    flex-direction: column;
+    max-width: 90vw;
+    justify-self: center;
+    font-size: 1.4em;
+    font-family: Poppins-Regular;
+
+    @media screen and (max-width: 991px) {
+        font-size: 1.2em;
+    }
+
+    @media screen and (max-width: 768px) {
+        font-size: 1.1em;
+    }
+
+    @media screen and (max-width: 576px) {
+        font-size: 1.0em;
+    }
+
+    .title_container {
+        display: flex;
+        align-items: center;
+        margin-bottom: 2%;
+
+        .MuiTypography-root {
+            width: 50%;
+            color: $green;
+            font-family: inherit;
+            font-size: inherit;
+        }
+
+        .add_order-button {
+            display: flex;
+            width: 50%;
+            justify-content: flex-end;
+
+            .MuiButtonBase-root {
+                display: flex;
+                background-color: $green;
+                color: $white;
+                font-family: inherit;
+                text-transform: none;
+
+                @media screen and (max-width: 991px) {
+                    font-size: 0.8em;
+                }
+
+                @media screen and (max-width: 768px) {
+                    font-size: 0.8em;
+                }
+
+                @media screen and (max-width: 576px) {
+                    font-size: 0.7em;
+                }
+            }
+        }
+    }
+
+    .add_order {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        background-color: $green_semi;
+        opacity: 0;
+        transform: translateX(-20px);
+        transition: opacity 300ms ease-in-out, transform 300ms ease-in-out;
+        max-height: 0;
+        overflow: hidden;
+        visibility: hidden;
+
+        &.show {
+            opacity: 1;
+            transform: translateY(0);
+            visibility: visible;
+            max-height: 100%;
+            margin-bottom: 2%;
+            padding: 2%;
+        }
+
+        .MuiTypography-root {
+            font-family: Poppins-Regular;
+            color: $green;
+            margin: 1%;
+
+            @media screen and (max-width: 991px) {
+                font-size: 0.8em;
+            }
+
+            @media screen and (max-width: 768px) {
+                font-size: 0.8em;
+            }
+
+            @media screen and (max-width: 576px) {
+                font-size: 0.7em;
+            }
+        }
+
+        .customer_selector {
+            width: 100%;
+
+            .MuiFormControl-root {
+                display: flex;
+                width: 300px;
+                margin: 1%;
+                background-color: $white;
+
+                .MuiFormLabel-root {
+                    font-family: Poppins-Regular;
+
+                    @media screen and (max-width: 991px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 768px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 576px) {
+                        font-size: 0.7em;
+                    }
+                }
+
+                .MuiInputBase-root {
+                    font-family: Poppins-Regular;
+
+                    @media screen and (max-width: 991px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 768px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 576px) {
+                        font-size: 0.7em;
+                    }
+                }
+
+                .MuiButtonBase-root {
+                    background-color: transparent;
+                }
+            }
+        }
+
+        .product_selection {
+            display: flex;
+            width: 100%;
+            background-color: #104d57c3;
+            flex-direction: column;
+            padding: 2%;
+
+            .MuiTypography-root {
+                display: flex;
+                color: $white;
+            }
+
+            .headers_prompt {
+                display: flex;
+                width: 100%;
+                flex-direction: row;
+
+                .item_name {
+                    display: flex;
+                    justify-content: center;
+                    width: 65%;
+                    color: $white;
+                    margin-right: 2%;
+                }
+
+                .quantity {
+                    display: flex;
+                    justify-content: center;
+                    color: $white;
+                    width: 20%;
+                }
+            }
+
+            .fields {
+                display: flex;
+                width: 100%;
+                flex-direction: row;
+
+                .MuiTypography-root {
+                    display: flex;
+                    color: $white;
+                    width: 5%;
+                    align-items: center;
+                }
+
+                .MuiAutocomplete-root {
+                    width: 65%;
+                    margin-right: 2%;
+
+                    .MuiFormControl-root {
+                        width: 100%;
+                    }
+                }
+
+                .MuiFormControl-root {
+                    display: flex;
+                    width: 20%;
+                    background-color: $white;
+
+                    .MuiFormLabel-root {
+                        font-family: Poppins-Regular;
+
+                        @media screen and (max-width: 991px) {
+                            font-size: 0.8em;
+                        }
+
+                        @media screen and (max-width: 768px) {
+                            font-size: 0.8em;
+                        }
+
+                        @media screen and (max-width: 576px) {
+                            font-size: 0.7em;
+                        }
+                    }
+
+                    .MuiInputBase-root {
+                        font-family: Poppins-Regular;
+
+                        @media screen and (max-width: 991px) {
+                            font-size: 0.8em;
+                        }
+
+                        @media screen and (max-width: 768px) {
+                            font-size: 0.8em;
+                        }
+
+                        @media screen and (max-width: 576px) {
+                            font-size: 0.7em;
+                        }
+                    }
+
+                    .MuiButtonBase-root {
+                        background-color: transparent;
+                    }
+                }
+
+                .MuiIconButton-root {
+                    display: flex;
+                    color: $white;
+                    background-color: transparent;
+                }
+            }
+
+            .adder_button {
+                display: flex;
+                justify-content: flex-end;
+                margin: 2%;
+
+                .MuiIconButton-root {
+                    display: flex;
+                    background-color: $white;
+                    color: $green;
+                }
+            }
+        }
+
+        .add{
+            display: flex;
+            background-color: $green;
+            color: $white;
+            margin: 2%;
+            font-family: inherit;
+            text-transform: none;
+
+            @media screen and (max-width: 991px) {
+                font-size: 0.8em;
+            }
+
+            @media screen and (max-width: 768px) {
+                font-size: 0.8em;
+            }
+
+            @media screen and (max-width: 576px) {
+                font-size: 0.7em;
+            }
+        }
+    }
+
+    .order_details {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        background-color: $green_semi;
+        opacity: 0;
+        transform: translateX(-20px);
+        transition: opacity 300ms ease-in-out, transform 300ms ease-in-out;
+        max-height: 0;
+        overflow: hidden;
+        visibility: hidden;
+
+        &.show {
+            opacity: 1;
+            transform: translateY(0);
+            visibility: visible;
+            max-height: 100%;
+            margin-bottom: 2%;
+            padding: 2%;
+        }
+
+        .MuiTypography-root {
+            font-family: Poppins-Regular;
+            color: $green;
+            margin: 1%;
+
+            @media screen and (max-width: 991px) {
+                font-size: 0.8em;
+            }
+
+            @media screen and (max-width: 768px) {
+                font-size: 0.8em;
+            }
+
+            @media screen and (max-width: 576px) {
+                font-size: 0.7em;
+            }
+        }
+
+        .fields {
+            display: flex;
+            flex-direction: row;
+
+            @media screen and (max-width:576px) {
+                flex-direction: column;
+            }
+
+            .MuiFormControl-root {
+                display: flex;
+                width: 200px;
+                margin: 1%;
+                background-color: $white;
+
+                .MuiFormLabel-root {
+                    font-family: Poppins-Regular;
+
+                    @media screen and (max-width: 991px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 768px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 576px) {
+                        font-size: 0.7em;
+                    }
+                }
+
+                .MuiInputBase-root {
+                    font-family: Poppins-Regular;
+
+                    @media screen and (max-width: 991px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 768px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 576px) {
+                        font-size: 0.7em;
+                    }
+                }
+
+                .MuiButtonBase-root {
+                    background-color: transparent;
+                }
+            }
+        }
+
+        .MuiButtonBase-root {
+            display: flex;
+            background-color: $green;
+            color: $white;
+            font-family: inherit;
+            text-transform: none;
+
+            @media screen and (max-width: 991px) {
+                font-size: 0.8em;
+            }
+
+            @media screen and (max-width: 768px) {
+                font-size: 0.8em;
+            }
+
+            @media screen and (max-width: 576px) {
+                font-size: 0.7em;
+            }
+        }
+    }
+
+    .MuiBox-root {
+        .MuiTabs-root {
+            .MuiTab-root {
+                color: $green;
+                font-family: Poppins-Regular;
+
+                @media screen and (max-width: 991px) {
+                    font-size: 0.8em;
+                }
+
+                @media screen and (max-width: 768px) {
+                    font-size: 0.8em;
+                }
+
+                @media screen and (max-width: 576px) {
+                    font-size: 0.7em;
+                }
+            }
+
+            .MuiTabs-indicator {
+                background-color: $green;
+            }
+        }
+    }
+
+    //styling for search bar
+    .MuiBox-root {
+        padding: 5px 0 5px 0;
+
+        .MuiFormControl-root {
+            display: flex;
+
+            .MuiFormLabel-root {
+                font-family: Poppins-Regular;
+
+                @media screen and (max-width: 991px) {
+                    font-size: 0.8em;
+                }
+
+                @media screen and (max-width: 768px) {
+                    font-size: 0.8em;
+                }
+
+                @media screen and (max-width: 576px) {
+                    font-size: 0.7em;
+                }
+            }
+
+            .MuiInputBase-root {
+                font-family: Poppins-Regular;
+
+                @media screen and (max-width: 991px) {
+                    font-size: 0.8em;
+                }
+
+                @media screen and (max-width: 768px) {
+                    font-size: 0.8em;
+                }
+
+                @media screen and (max-width: 576px) {
+                    font-size: 0.7em;
+                }
+            }
+
+            .MuiButtonBase-root {
+                background-color: transparent;
+            }
+        }
+    }
+
+    .table_container {
+        display: flex;
+        width: 100%;
+
+        .MuiBox-root {
+
+            //styling for tabs
+            .table_panel {
+                display: flex;
+
+                .MuiBox-root {
+                    display: flex;
+                    width: 100%;
+                    padding: 0;
+
+                    .MuiPaper-root {
+                        display: flex;
+
+                        .MuiTable-root {
+                            .MuiTableHead-root {
+                                .MuiTableCell-root {
+                                    font-family: Poppins-SemiBold;
+                                }
+                            }
+
+                            .MuiTableCell-root {
+                                font-family: Poppins-Regular;
+
+                                @media screen and (max-width: 991px) {
+                                    font-size: 0.8em;
+                                }
+
+                                @media screen and (max-width: 768px) {
+                                    font-size: 0.8em;
+                                }
+
+                                @media screen and (max-width: 576px) {
+                                    font-size: 0.7em;
+                                }
+
+                                .MuiButtonBase-root {
+                                    background-color: $white;
+                                    box-shadow: none;
+                                    color: $green;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
