--- a/src/pages/management/productManagement.scss
+++ b/src/pages/management/productManagement.scss
@@ -1,2 +1,366 @@
 @import '../../color.scss';
 @import '../../assets/fonts/fonts.scss';
+
+.products_container {
+    display: flex;
+    flex-direction: column;
+    max-width: 90vw;
+    justify-self: center;
+    font-size: 1.4em;
+    font-family: Poppins-Regular;
+
+    @media screen and (max-width: 991px) {
+        font-size: 1.2em;
+    }
+
+    @media screen and (max-width: 768px) {
+        font-size: 1.1em;
+    }
+
+    @media screen and (max-width: 576px) {
+        font-size: 1.0em;
+    }
+
+    .title_container {
+        display: flex;
+        align-items: center;
+        margin-bottom: 2%;
+
+        .MuiTypography-root {
+            width: 50%;
+            color: $green;
+            font-family: inherit;
+            font-size: inherit;
+        }
+
+        .add_product-button {
+            display: flex;
+            width: 50%;
+            justify-content: flex-end;
+
+            .MuiButtonBase-root {
+                display: flex;
+                background-color: $green;
+                color: $white;
+                font-family: inherit;
+                text-transform: none;
+
+                @media screen and (max-width: 991px) {
+                    font-size: 0.8em;
+                }
+
+                @media screen and (max-width: 768px) {
+                    font-size: 0.8em;
+                }
+
+                @media screen and (max-width: 576px) {
+                    font-size: 0.7em;
+                }
+            }
+        }
+    }
+
+    .add_product {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        background-color: $green_semi;
+        opacity: 0;
+        transform: translateX(-20px);
+        transition: opacity 300ms ease-in-out, transform 300ms ease-in-out;
+        max-height: 0;
+        overflow: hidden;
+        visibility: hidden;
+
+        &.show {
+            opacity: 1;
+            transform: translateY(0);
+            visibility: visible;
+            max-height: 100%;
+            margin-bottom: 2%;
+            padding: 2%;
+        }
+
+        .MuiTypography-root {
+            font-family: Poppins-Regular;
+            color: $green;
+            margin: 1%;
+
+            @media screen and (max-width: 991px) {
+                font-size: 0.8em;
+            }
+
+            @media screen and (max-width: 768px) {
+                font-size: 0.8em;
+            }
+
+            @media screen and (max-width: 576px) {
+                font-size: 0.7em;
+            }
+        }
+
+        .fields {
+            display: flex;
+            flex-direction: row;
+
+            @media screen and (max-width:576px) {
+                flex-direction: column;
+            }
+
+            .MuiFormControl-root {
+                display: flex;
+                width: 200px;
+                margin: 1%;
+                background-color: $white;
+
+                .MuiFormLabel-root {
+                    font-family: Poppins-Regular;
+
+                    @media screen and (max-width: 991px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 768px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 576px) {
+                        font-size: 0.7em;
+                    }
+                }
+
+                .MuiInputBase-root {
+                    font-family: Poppins-Regular;
+
+                    @media screen and (max-width: 991px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 768px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 576px) {
+                        font-size: 0.7em;
+                    }
+                }
+
+                .MuiButtonBase-root {
+                    background-color: transparent;
+                }
+            }
+        }
+
+        .MuiButtonBase-root {
+            display: flex;
+            background-color: $green;
+            color: $white;
+            font-family: inherit;
+            text-transform: none;
+
+            @media screen and (max-width: 991px) {
+                font-size: 0.8em;
+            }
+
+            @media screen and (max-width: 768px) {
+                font-size: 0.8em;
+            }
+
+            @media screen and (max-width: 576px) {
+                font-size: 0.7em;
+            }
+        }
+    }
+
+    .edit_product {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        background-color: $green_semi;
+        opacity: 0;
+        transform: translateX(-20px);
+        transition: opacity 300ms ease-in-out, transform 300ms ease-in-out;
+        max-height: 0;
+        overflow: hidden;
+        visibility: hidden;
+
+        &.show {
+            opacity: 1;
+            transform: translateY(0);
+            visibility: visible;
+            max-height: 100%;
+            margin-bottom: 2%;
+            padding: 2%;
+        }
+
+        .MuiTypography-root {
+            font-family: Poppins-Regular;
+            color: $green;
+            margin: 1%;
+
+            @media screen and (max-width: 991px) {
+                font-size: 0.8em;
+            }
+
+            @media screen and (max-width: 768px) {
+                font-size: 0.8em;
+            }
+
+            @media screen and (max-width: 576px) {
+                font-size: 0.7em;
+            }
+        }
+
+        .fields {
+            display: flex;
+            flex-direction: row;
+
+            @media screen and (max-width:576px) {
+                flex-direction: column;
+            }
+
+            .MuiFormControl-root {
+                display: flex;
+                width: 200px;
+                margin: 1%;
+                background-color: $white;
+
+                .MuiFormLabel-root {
+                    font-family: Poppins-Regular;
+
+                    @media screen and (max-width: 991px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 768px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 576px) {
+                        font-size: 0.7em;
+                    }
+                }
+
+                .MuiInputBase-root {
+                    font-family: Poppins-Regular;
+
+                    @media screen and (max-width: 991px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 768px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 576px) {
+                        font-size: 0.7em;
+                    }
+                }
+
+                .MuiButtonBase-root {
+                    background-color: transparent;
+                }
+            }
+        }
+
+        .MuiButtonBase-root {
+            display: flex;
+            background-color: $green;
+            color: $white;
+            font-family: inherit;
+            text-transform: none;
+
+            @media screen and (max-width: 991px) {
+                font-size: 0.8em;
+            }
+
+            @media screen and (max-width: 768px) {
+                font-size: 0.8em;
+            }
+
+            @media screen and (max-width: 576px) {
+                font-size: 0.7em;
+            }
+        }
+    }
+
+    .table_container {
+        display: flex;
+        flex-direction: column;
+
+        .MuiBox-root {
+            .MuiFormControl-root {
+                display: flex;
+                margin-bottom: 2%;
+
+                .MuiFormLabel-root {
+                    font-family: Poppins-Regular;
+
+                    @media screen and (max-width: 991px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 768px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 576px) {
+                        font-size: 0.7em;
+                    }
+                }
+
+                .MuiInputBase-root {
+                    font-family: Poppins-Regular;
+
+                    @media screen and (max-width: 991px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 768px) {
+                        font-size: 0.8em;
+                    }
+
+                    @media screen and (max-width: 576px) {
+                        font-size: 0.7em;
+                    }
+                }
+
+                .MuiButtonBase-root {
+                    background-color: transparent;
+                }
+            }
+        }
+        .MuiPaper-root{
+            display: flex;
+            
+            .MuiTable-root{
+                .MuiTableHead-root {
+                    .MuiTableCell-root {
+                        font-family: Poppins-SemiBold;
+                    }
+                }
+                .MuiTableCell-root{
+                    font-family: Poppins-Regular;
+                    @media screen and (max-width: 991px) {
+                        font-size: 0.8em;
+                    }
+    
+                    @media screen and (max-width: 768px) {
+                        font-size: 0.8em;
+                    }
+    
+                    @media screen and (max-width: 576px) {
+                        font-size: 0.7em;
+                    }
+                    .MuiButtonBase-root{
+                        background-color: $white;
+                        box-shadow: none;
+                        color: $green;
+                    }
+                }
+            }
+        }
+    }
+}
