--- a/src/pages/web-pages/login.scss
+++ b/src/pages/web-pages/login.scss
@@ -8,7 +8,7 @@
     min-height: 100vh;
     margin: 0;
     color: $green;
-    font-family: GillSans;
+    font-family: Poppins-Regular;
     background-color: $white;
 
     .MuiStack-root {
@@ -37,7 +37,7 @@
         .MuiTypography-root {
             color: $green;
             font-size: 1.4em;
-            font-family: GillSans;
+            font-family: Poppins-Regular;
         }
 
         .logo {
@@ -64,7 +64,7 @@
             width: 100%;
 
             .MuiFormLabel-root {
-                font-family: GillSans;
+                font-family: Poppins-Regular;
                 color: $green;
                 font-size: 1.0em;
 
@@ -82,7 +82,7 @@
             }
 
             .MuiInputBase-root {
-                font-family: GillSans;
+                font-family: Poppins-Regular;
                 font-size: 1.0em;
 
                 @media screen and (max-width: 991px) {
@@ -108,17 +108,16 @@
             justify-content: flex-end;
 
             .MuiLink-root {
-                font-family: GillSans;
+                font-family: Poppins-Regular;
                 text-decoration: none;
                 color: $green;
                 font-size: 12px;
-                font-family: GillSans;
             }
         }
 
         .MuiButtonBase-root {
             display: flex;
-            font-family: GillSans;
+            font-family: Poppins-Regular;
             background-color: $green ;
             width: 100%;
         }
